finish model, start discussion

--- a/writing/Cubert/Cubert manuscript.tex
+++ b/writing/Cubert/Cubert manuscript.tex
@@ -644,9 +644,9 @@ Where speaker's access to knowledge is shared between speakers in listeners (in 
 
 To generate qualitative and quantitative predictions that we may compare with our experimental results, we need to fix various parameter settings within the model. Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.}
 
- States $s$ correspond to sets of objects, which hold scalar properties. More specifically, states are sets of positive integers, for example $\{3, 3, 4\}$ or $\{4, 5, 5\}$. Taking these objects as stand-ins for boxes and their properties as stand-ins for individual box sizes, the state $\{3, 3, 4\}$ corresponds to a plurality of three boxes, two of size 3 and a third of size 4. States are formed by drawing three times from a uniform prior distribution over boxes (i.e., objects); boxes come in three sizes: 3, 4 5.
+ States $s$ correspond to sets of four objects, which hold scalar properties. More specifically, states are sets of positive integers, for example $\{3, 3, 4, 4\}$ or $\{3, 4, 4, 4\}$. Taking these objects as stand-ins for boxes and their properties as stand-ins for individual box sizes, the state $\{3, 3, 4, 4\}$ corresponds to a plurality of four boxes, two of size 3 and two of size 4. States are formed by drawing four times from a uniform prior distribution over boxes (i.e., objects); boxes come in two sizes: 3 or 4.
  
- Next, the utterances. Speakers have the choice between three utterances: one {unambiguously distributive} (e.g., \emph{the boxes each are big}), one {unambiguously collective} (e.g., \emph{the boxes together are big}), and the last {ambiguous} between a distributive and collective interpretation (e.g., \emph{the boxes are big}). In \Next, we give the semantics for these utterances, to be used in our model by the literal listener $L_{0}$.
+ Next, the utterances. Speakers have the choice between three utterances: one {unambiguously distributive} (e.g., \emph{the boxes each are big}), one {unambiguously collective} (e.g., \emph{the boxes together are big}), and the last {ambiguous} between a distributive and collective interpretation (e.g., \emph{the boxes are big}). The ambiguous utterance is always as least as cheap (in terms of the cost to the speaker) as the unambiguous utterances. In \Next, we give the semantics for these utterances, to be used in our model by the literal listener $L_{0}$.
  
  \ex. \emph{Utterance semantics}:
  \a. \sem{\texttt{distributive}} = \lam $s$. \texttt{distributive-interpretation}($s$)
@@ -665,7 +665,7 @@ To generate qualitative and quantitative predictions that we may compare with ou
 
 The \texttt{distributive-interpretation} is true of a state $s$ just in case each of its members exceeds some distributive threshold.\footnote{Following \cite{lassitergoodman2013}, we treat the threshold parameters as lifted variables that get resolved by the pragmatic listener as he interprets the speaker's utterance. So, strictly speaker, $V$ in Fig.~\ref{pluralRSA} represents not just the interpretation-resolving variable, but also the threshold variables for the gradable predicates.} In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state --- the state taken together --- exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. So far, no deviation from the formal semantics tradition.
 
-What sets this semantics apart from the tradition that informs it is the \textcolor{red}{\texttt{noise}} parameter in the \texttt{collective-interpretation}, a scalar multiplier of the set aggregate estimate. This parameter represents possible noise in the determination of, say, collective size. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. Possible values for \textcolor{red}{\texttt{noise}} are shown in \Next, where, for example, \texttt{low} \textcolor{red}{\texttt{noise}} equals 1 (i.e., no change to the state estimate) 100\% of the time.
+What sets this semantics apart from the tradition that informs it is the \textcolor{red}{\texttt{noise}} parameter in the \texttt{collective-interpretation}, a scalar multiplier of the set aggregate estimate. This parameter explicitly represents possible noise in the determination of, say, collective size. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. To evaluate the qualitative predictions of our model, we begin with the possible values for \textcolor{red}{\texttt{noise}} shown in \Next, where, for example, \texttt{low} \textcolor{red}{\texttt{noise}} equals 1 (i.e., no change to the state estimate) 100\% of the time.
 
 \ex. \emph{Noise priors}:\\[5pt]
 \texttt{no} \textcolor{red}{\texttt{noise}}:\\[2pt]
@@ -679,11 +679,12 @@ What sets this semantics apart from the tradition that informs it is the \textco
 
 With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise (i.e., contextual predictability) is a property of the discourse context, and as such speakers and listeners both have access to its value.
 
-Lastly, to model speaker access to knowledge, the global parameter $a$ determines whether the speaker's state observation $o$ matches the state exactly (i.e., the speaker has full perceptual access to $s$), or whether it summarizes $s$ via summation (i.e., the speaker has limited perceptual access to $s$). Where $a$ is set to \texttt{full} knowledge, the speaker's belief distribution over possible states is exact, a delta distribution over \emph{the} state (Fig.~\ref{speakerbelief}, left). Having observed $\{3,4,4\}$, the speaker knows the state is $\{3,4,4\}$. Where $a$ is set to \texttt{partial} knowledge, the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, right). With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 11. But more than one state could generate this value, namely the states $\{3,4,4\}$ and $\{3,4,5\}$.
+Lastly, to model speaker access to knowledge, the global parameter $a$ determines whether the speaker's state observation $o$ matches the state exactly (i.e., the speaker has full perceptual access to $s$), or whether it summarizes $s$ via summation (i.e., the speaker has limited perceptual access to $s$). Where $a$ is set to \texttt{full} knowledge, the speaker's belief distribution over possible states is exact, a delta distribution over \emph{the} state (Fig.~\ref{speakerbelief}, top). Having observed $\{3,3,4,4\}$, the speaker knows the state is $\{3,3,4,4\}$ (and not, say $\{4,4,3,3\}$). Where $a$ is set to \texttt{partial} knowledge, the speaker's belief distribution is broader (Fig.~\ref{speakerbelief}, bottom). With \texttt{partial} knowledge, the speaker only observes the sum of the individual state values, say 14. But more than one state could generate this value, namely any combination of two size 3 boxes with two size 4 boxes.
 
 \begin{figure}[h]
-	XXX speaker belief distributions
-	\caption{Speaker belief distributions resulting from \texttt{full} (left) and \texttt{partial} (right) perceptual access to the state $\{3,4,4\}$.} \label{speakerbelief}
+	\includegraphics[width=\linewidth]{images/speaker-full.eps}\\
+	\includegraphics[width=\linewidth]{images/speaker-partial.eps}
+	\caption{Speaker belief distributions resulting from \texttt{full} (top) and \texttt{partial} (bottom) perceptual access to the state $\{3,3,4,4\}$. XXX prettier plots} \label{speakerbelief}
 \end{figure}
 
 Finally, we have the pieces needed to generate predictions from the plural predication model. Given our interest in the effects of noise and speaker knowledge on the interpretation of potentially ambiguous plural predications, of primary interest is the value of the interpretation-resolving variable $V$ for the \texttt{ambiguous} utterance. In Fig.~\ref{modelresults}, we plot the probability that $V$ is \texttt{collective} after hearing the \texttt{ambiguous} utterance; in other words, we plot the probability of a collective interpretation as a function of collective noise and speaker knowledge.
@@ -695,42 +696,94 @@ Finally, we have the pieces needed to generate predictions from the plural predi
 	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.} \label{modelresults}
 \end{figure}
 
-The qualitative predictions of our plural predication model match the intuitions and experimental results that motivated the model in the first place. Perhaps most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. That is to say, as noise decreases, collective properties become more predictable in context, and collective interpretations become more likely. We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
+The qualitative predictions of our plural predication model match the intuitions and experimental results that motivated the model in the first place. Perhaps most striking is the monotonic increase in probability of collective interpretations as collective noise decreases. That is to say, as noise decreases, collective properties become more predictable in context, and collective interpretations become more likely. We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
 
-Another outcome of our model's predictions is the increase in the probability of a collective interpretation as the speaker's knowledge access becomes limited. With only partial access to the actual state $s$ --- such that the speaker's observation $o$ of $s$ is its summation ---  $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks perceptual support, and therefore becomes less likely; as a result, collective interpretations become more likely.
+Another outcome of our model's predictions is the increase in the probability of a collective interpretation as the speaker's knowledge access becomes limited. With only partial access to the actual state $s$ --- such that the speaker's observation $o$ of $s$ is its summation ---  $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks perceptual/epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
-We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing estimate noise) increases the probability of collective interpretation; and, regardless of the amount of collective noise, removing support for a distributive interpretation (by limiting speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increase the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Once we fit these parameters to the human data collected in Expt.~2, we may test both qualitative and quantitative predictions of the model.
+We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing estimate noise) increases the probability of collective interpretation; and, regardless of the amount of collective noise, removing support for a distributive interpretation (by limiting speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Once we fit these parameters to the human data collected in Expt.~2, we may test both qualitative and quantitative predictions of the model.
 
-First, we should settle on the human data to which we compare the model outcomes. To evaluate the role of speaker knowledge, we look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). In Fig.~\ref{heavymodel}, we plot average collective endorsement ratings from Expt.~2, together with model predictions fit to these data.
+Comparing the model predictions in Fig.~\ref{modelresults} to the rates of collective endorsement from Expt.~2 in Fig.~\ref{expt2results}, the first thing to notice is the overall higher rates of collective endorsement in the human data. To capture this fact, we can change the prior probability of a collective interpretation, $p(V)$, in our model. In Fig.~\ref{modelresults}, that parameter is set to 0.5, or chance; to achieve a maximal fit between our model and the dependent measure from Expt.~2, we fit that parameter to 0.88 for each of the three predicates.
+
+To evaluate the role of speaker knowledge, we look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). Here we fit only the specific values for noise in the model; all other parameters remain unchanged. With \emph{heavy}-specific values for ``random'' and ``regular'' noise, we generate the model predictions in Fig.~\ref{heavymodel}, plotted with average collective endorsement ratings from Expt.~2. Perhaps remarkably, by simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.8\linewidth]{plots/heavymodel.eps}
-	\vspace{5pt}
-	\caption{Fitted model predictions and human data from Expt.~2 for collective interpretations of \emph{heavy}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of interpretation (``low'' vs.~``mid'') and the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``partial'').} \label{heavymodel}
+	\vspace{0pt}
+	\caption{Fitted model predictions and human data from Expt.~2 for collective interpretations of \emph{heavy}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise in the collective interpretation, and the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``partial'').} \label{heavymodel}
 \end{figure}
+
+Next, for \emph{big} and \emph{tall} we again predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, we again fit predicate-specific values for collective interpretation noise. Also, we cheapen the cost of the ambiguous utterance relative to the unambiguous ones; in place of the flat prior distribution over possible utterances used above, here we set the prior such that \texttt{ambiguous} is twice as cheap as \texttt{collective} or \texttt{distributive}. With no other changes to model parameters, we generate the predictions plotting in Fig.~\ref{bigtallmodel}; once again, the fit is near perfect.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.8\linewidth]{plots/bigtallmodel.eps}
-	\vspace{5pt}
-	\caption{Fitted model predictions and human data from Expt.~2 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of interpretation (``low'' vs.~``mid'').} \label{bigtallmodel}
+	\vspace{0pt}
+	\caption{Fitted model predictions and human data from Expt.~2 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of collective interpretation.} \label{bigtallmodel}
 \end{figure}
+
+In addition to the match between the qualitative predictions of our model and the human data from Expt.~2, we have shown that fitting predicate-specific parameters for noise and utterance cost yields near exact quantitative predictions of behavior. Put simply, our model of plural predication succeeds. Collective interpretations become more likely as the properties they name become more predictable in context.
 
 
 \section{General discussion}
 
+We began with an age-old observation about collective interpretations for gradable predicates with plural subjects: some predicates admit collective interpretations, while others strongly (or totally) resist them. This phenomenon, dubbed ``stubborn distributivity'' after those predicates that ostensibly refuse collective interpretations, has been documented and described, even characterized in terms of semantic constraints. But an explanation of the phenomenon has proven elusive. Here, we offer an explanation: stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in context; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
+
+We found evidence for this information-theoretic explanation over the course of two experiments. First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of experiment also demonstrate the role of speaker access to knowledge, something both speakers and listeners track as they communicate with each other. In a scenario where speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely.
+
+In Expt.~2, we replicated the speaker knowledge effect while testing more directly the role of contextual predictability in collective predication. After manipulating the regularity of the predication context, we found that more regular contexta yielded greater rates of collective paraphrase endorsement for \emph{each} of the predicates tested. We thus confirmed our hypothesis: increasing contextual predictability of collective properties --- by increasing the regularity of the contexts themselves -- increases rates collective interpretations. In other words, rates of collective interpretation were shown to be determined by an interaction between the property named and the context of predication.
+
+Having both demonstrated and quantified the role of contextual predictability and speaker knowledge in plural predication, we then formalized the role of each factor in a computational model of communication. Our model, conceived within the Rational Speech-Act framework, employed standard semantics to achieve not only accurate qualitative, but accurate quantitative predictions of our human data. Speaker knowledge affected collective interpretations by removing epistemic support and thereby decreasing a speaker's utility for distributive interpretations. Contextual predictability had a similar effect: noisier, less predictable collective interpretations are less effective at correctly communicating about the world; being less useful, they are less likely.
+
+In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
 
 \subsection{Implications for semantic theories of plurality}
 
+Plural predication is heavily dependent on the context in which that predication occurs. Taking as our starting point the null hypothesis that all such predications are potentially ambiguous between collective and distributive interpretations, we have seen that speakers and listeners track properties of the context (and of each other) as they endeavor to resolve this ambiguity. By considering plural predication within an articulated formal theory of communication (i.e., the Rational Speech-Act framework), we have identified and isolated two elements of this calculus: a) speaker's access to knowledge, and b) noise in the estimation of properties. For present purposes, it is this latter element, contextual predictability, that features most prominently in our explanation of stubborn distributivity.
 
-\subsection{Implications for models of ambiguity resolution}
+Recall that current theories of the phenomenon describe it as a constraint on the sort of subjects certain predicates may compose with. Concretely, stubbornly distributive predicates refuse pluralities from their basic, un-starred denotations. To compose with a plural subject, the predicate must be closed under sum-formation. No such restriction applies to complaisantly collective predicates, which welcome pluralities in their un-starred denotations. The terrain of denotations in \Next results; note the absence of pluralities from the basic denotation of \texttt{big}.
+
+\ex. \emph{Stubbornly distributive} \texttt{big}:
+\a. \sem{\texttt{big}} = \{\texttt{a}, \texttt{b}, \ldots\}
+\b. \sem{*\texttt{big}} = \{\texttt{a}, \texttt{b}, \texttt{a}$\oplus$\texttt{b}, \ldots\}
+
+\ex. \emph{Complaisantly collective} \texttt{heavy}:
+\a. \sem{\texttt{heavy}} = \{\texttt{a}, \texttt{b}, \texttt{a}$\oplus$\texttt{b}, \ldots\}
+\b. \sem{*\texttt{heavy}} = \{\texttt{a}, \texttt{b}, \texttt{a}$\oplus$\texttt{b}, \ldots\}
+
+Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretation, which result from direct predication between a singular, or basic predicate and a plural subject. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashed stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them. And it is the way that context supports collective interpretations that provides the key to understanding stubborn distributivity: contextual predictability.
+
+Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{round}, which name properties of size or shape. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates, but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties as we did in Expt.~2 decreases this difficulty and thereby increases the likelihood of collective interpretations.
+
+Further evidence for the non-trivial role of contextual predictability in collective predication comes from data demonstrating that one and the same predicate receives varying rates of collective interpretations depending on the noun that serves as its subject. In a pilot study of ambiguity resolution in naturally-occurring examples of plural predication, we identified the 40 most frequent subject-predicate combinations in a plural predication frame (i.e., \emph{The NOUNs were ADJECTIVE}) in the British National Corpus.\footnote{The sentences in \ref{bnc} were extracted from the British National Corpus Online service, managed by Oxford University Computing Services on behalf of the BNC Consortium. All rights in the texts cited are reserved.} Of those pairs, the predicate \emph{small} appeared four times, each with a different subject. Using the same paraphrase methodology from Expt.~2, we had 80 subjects rate distributive ``each'' vs.~collective ``together'' paraphrases of the four sentences in \Next.
+
+\ex. \label{bnc}\a. The classes were small.
+\b. The rooms were small.
+\b. The children were small.
+\b. The numbers were small.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.9\linewidth]{plots/small_coll_plot.eps}
+	\vspace{0pt}
+	\caption{Collective paraphrase endorsement rates for different nouns serving as the subject to the predicate \emph{small}.} \label{smallcoll}
+\end{figure}
+
+If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics of these words, we should find no effect of the subject noun in the determination of their distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. As Fig.~\ref{smallcoll} demonstrates, however, they are not. More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}.\footnote{A linear mixed effects model predicting collective endorsement rate by subject noun finds that sentences with the subject \emph{numbers} are receive greater rates of collective endorsement than do sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).} Allow us to suggest an explanation for the exceptional behavior of \emph{numbers} in terms that by now ought to ring familiar: faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers is relatively predictable in context, more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). The same mechanism we saw at play in the context manipulation of Expt.~2 rears its head again here: contextual predictability of the collective property determines availability of collective interpretations.
+
+Note that subject nouns already played a crucial role in the disambiguation of plural predications. We saw that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (\emph{the pile of boxes} name a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these nouns seem to unlock the collective interpretation. Just as our contextual manipulation in Expt.~2 increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the information-theoretic mechanism remains the same.
+
+To understand this mechanism, namely how contextual predictability affects the calculus of interpretation choice, we modeled its contribution explicitly within a computational model of plural predication.
+
+
+\subsection{Implications for formal models of pragmatics}
 
 
 \section{Conclusion}
 
 
 \appendix
+
 \section{Full mixed effects linear regression models from Expt.~1}\label{expt1results}
 
 
