--- a/writing/Cubert/Cubert manuscript.tex
+++ b/writing/Cubert/Cubert manuscript.tex
@@ -324,7 +324,7 @@ Size and shape adjectives, in other words, predicates of physical extent, resist
 
 \citet{schwarzschild2011} uses the failed correspondences in \Next illustrate one strategy in drawing out the failed collective reading for these gradable predicates: employing periphrastic paraphrases of the predicate. For example, to assert that the total size of some set of boxes exceeds a salient size cutoff, we may say that those boxes take up a lot of space. However, taking up a lot of space is not, strictly speaking, synonymous with having a large collective size; these paraphrases point to the missing collective reading, but only indirectly. Moreover, these paraphrases more explicitly name the collective property that would have been intended under a collective construal of the gradable predicate.\\
 
-\begin{minipage}{.405\textwidth}
+\noindent \begin{minipage}{.45\textwidth}
 	\ex.
 	The boxes are large.\\
 	The phone calls were long.\\
@@ -342,7 +342,7 @@ Size and shape adjectives, in other words, predicates of physical extent, resist
 
 Replacing the definite plural subject noun with a group/collective noun \citep[i.e., an atomizer;][]{scontras2014diss} is another way to make available the elusive collective reading. Intuitively, these collective nouns transform the plurality (e.g., the boxes) into a single individual (i.e., a pile), which readily composes with the gradable predicate. Crucially, these collective nouns are used the fix the arrangement of the named plurality, and as a result collective predication succeeds.\\
 
-\begin{minipage}{.405\textwidth}
+\noindent \begin{minipage}{.45\textwidth}
 	\ex.
 	The boxes are large.\\
 	The phone calls were long.\\
@@ -405,7 +405,7 @@ Here is the hypothesis: Collective interpretations are susceptible to varying am
 
 \section{Testing the predictions}
 
-Assuming that contextual predictability determines collective predication, we should find that increasing the contextual predictability of collective properties increases the prevalence of collective predication. More concretely, the introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective predication: if physical arrangements are less likely to change, or if the set of possible evaluation strategies shrinks, collective properties become more predictable on the basis of context, and therefore collective construals stand a better chance of being informative. They therefore becomes more likely. 
+Assuming that contextual predictability determines availability of collective interpretations, we should find that increasing the contextual predictability of collective properties increases the prevalence of collective predication. More concretely, the introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective predication: if physical arrangements are less likely to change, or if the set of possible evaluation strategies shrinks, collective properties become more predictable on the basis of context, and therefore collective construals stand a better chance of being informative. They therefore becomes more likely. 
 
 We may also assess the role of speaker knowledge in plural predication by having context manipulate epistemic states of speakers. By limiting speakers' access to the properties of individual members of sets, we should find the listeners are more likely to arrive at a collective interpretation of plural predications. Like contextual predictability, the influence of speaker knowledge should succeed to the extent that speakers and listeners are reasoning about each other as they use language to communicate.
 
@@ -737,11 +737,11 @@ Having both demonstrated and quantified the role of contextual predictability an
 
 In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
 
-\subsection{Implications for semantic theories of plurality}
+\subsection{Implications for semantic theories of plural predication}
 
-Plural predication is heavily dependent on the context in which that predication occurs. Taking as our starting point the null hypothesis that all such predications are potentially ambiguous between collective and distributive interpretations, we have seen that speakers and listeners track properties of the context (and of each other) as they endeavor to resolve this ambiguity. By considering plural predication within an articulated formal theory of communication (i.e., the Rational Speech-Act framework), we have identified and isolated two elements of this calculus: a) speaker's access to knowledge, and b) noise in the estimation of properties. For present purposes, it is this latter element, contextual predictability, that features most prominently in our explanation of stubborn distributivity.
+Plural predication is heavily dependent on the context in which that predication occurs. Taking as our starting point the null hypothesis that all such predications are potentially ambiguous between collective and distributive interpretations, we saw that speakers and listeners track properties of the context (and of each other) as they endeavor to resolve this ambiguity. By considering plural predication within an articulated formal theory of communication (i.e., the Rational Speech-Act framework), we have identified and isolated two elements of this calculus: a) the speaker's access to knowledge; and b) noise in the estimation of properties, or contextual predictability. For present purposes, it is this latter element, contextual predictability, that features most prominently in our explanation of stubborn distributivity.
 
-Recall that current theories of the phenomenon describe it as a constraint on the sort of subjects certain predicates may compose with. Concretely, stubbornly distributive predicates refuse pluralities from their basic, un-starred denotations. To compose with a plural subject, the predicate must be closed under sum-formation. No such restriction applies to complaisantly collective predicates, which welcome pluralities in their un-starred denotations. The terrain of denotations in \Next results; note the absence of pluralities from the basic denotation of \texttt{big}.
+Recall that current theories of stubborn distributivity describe it as a constraint on the sort of subjects certain predicates may compose with. Concretely, stubbornly distributive predicates refuse pluralities from their basic, un-starred denotations. To compose with a plural subject, the predicate must be closed under sum-formation, which ensures a distributive interpretation. No such restriction applies to complaisantly collective predicates, which welcome pluralities in their un-starred denotations. The terrain of denotations in \Next results; note the absence of pluralities from the basic denotation of \texttt{big}. For the plurality \texttt{a}$\oplus$\texttt{b} to hold the property *$\texttt{big}$, each of \texttt{a} and \texttt{b} must hold the property \texttt{big}.
 
 \ex. \emph{Stubbornly distributive} \texttt{big}:
 \a. \sem{\texttt{big}} = \{\texttt{a}, \texttt{b}, \ldots\}
@@ -753,7 +753,7 @@ Recall that current theories of the phenomenon describe it as a constraint on th
 
 Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretation, which result from direct predication between a singular, or basic predicate and a plural subject. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashed stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them. And it is the way that context supports collective interpretations that provides the key to understanding stubborn distributivity: contextual predictability.
 
-Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{round}, which name properties of size or shape. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates, but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties as we did in Expt.~2 decreases this difficulty and thereby increases the likelihood of collective interpretations.
+Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{round}, which name properties of size or shape. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates, but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties as we did in Expt.~2 decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
 
 Further evidence for the non-trivial role of contextual predictability in collective predication comes from data demonstrating that one and the same predicate receives varying rates of collective interpretations depending on the noun that serves as its subject. In a pilot study of ambiguity resolution in naturally-occurring examples of plural predication, we identified the 40 most frequent subject-predicate combinations in a plural predication frame (i.e., \emph{The NOUNs were ADJECTIVE}) in the British National Corpus.\footnote{The sentences in \ref{bnc} were extracted from the British National Corpus Online service, managed by Oxford University Computing Services on behalf of the BNC Consortium. All rights in the texts cited are reserved.} Of those pairs, the predicate \emph{small} appeared four times, each with a different subject. Using the same paraphrase methodology from Expt.~2, we had 80 subjects rate distributive ``each'' vs.~collective ``together'' paraphrases of the four sentences in \Next.
 
@@ -769,14 +769,23 @@ Further evidence for the non-trivial role of contextual predictability in collec
 	\caption{Collective paraphrase endorsement rates for different nouns serving as the subject to the predicate \emph{small}.} \label{smallcoll}
 \end{figure}
 
-If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics of these words, we should find no effect of the subject noun in the determination of their distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. As Fig.~\ref{smallcoll} demonstrates, however, they are not. More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}.\footnote{A linear mixed effects model predicting collective endorsement rate by subject noun finds that sentences with the subject \emph{numbers} are receive greater rates of collective endorsement than do sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).} Allow us to suggest an explanation for the exceptional behavior of \emph{numbers} in terms that by now ought to ring familiar: faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers is relatively predictable in context, more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). The same mechanism we saw at play in the context manipulation of Expt.~2 rears its head again here: contextual predictability of the collective property determines availability of collective interpretations.
+If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics of these words, we should find no effect of the subject noun in the determination of their distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. As Fig.~\ref{smallcoll} demonstrates, however, they are not. More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}.\footnote{A linear mixed effects model predicting collective endorsement rate by subject noun finds that sentences with the subject \emph{numbers} receive greater rates of collective endorsement than do sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).} Allow us to suggest an explanation for the exceptional behavior of \emph{numbers} in terms that by now ought to ring familiar: faced with the task of evaluating the relative size of a hypothetical set of numbers, participants converge on a single strategy, namely summing them up. In other words, the collective size of numbers is relatively predictable in context, more so than the collective size of children (determined by, e.g., height, weight, age, etc.) or of rooms and classes (determined by, e.g., number of occupants, seating capacity, overall volume, etc.). The same mechanism we saw at play in the context manipulation of Expt.~2 rears its head again here: contextual predictability of the collective property determines availability of collective interpretations.
 
 Note that subject nouns already played a crucial role in the disambiguation of plural predications. We saw that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (\emph{the pile of boxes} name a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these nouns seem to unlock the collective interpretation. Just as our contextual manipulation in Expt.~2 increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the information-theoretic mechanism remains the same.
 
-To understand this mechanism, namely how contextual predictability affects the calculus of interpretation choice, we modeled its contribution explicitly within a computational model of plural predication.
-
+To understand this mechanism, namely how contextual predictability affects the calculus of interpretation choice, we modeled its contribution explicitly within a computational model of plural predication. The success of this model adds to the growing body of support for the central role of rational inference in communication; we turn next to its details.
 
 \subsection{Implications for formal models of pragmatics}
+
+Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. By considering utterance semantics within this articulated model of pragmatics, what began as a description of the phenomenon --- certain predicates resist collective interpretations --- now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (i.e., collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
+
+Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive not just qualitative, but quantitative predictions. Formulated within the Rational Speech-Act framework, our model leveraged Bayesian inference, together with minimal assumptions about utterance semantics and cost, to match near-perfectly participants' behavior in our experimental paradigm. The model's success and structure serve to support the intuitions that motivated it: increasing the contextual predictability of collective properties increases the probability of an ambiguous plural predication receiving a collective interpretation. Given its discrete, isolable components, we can identify the contribution of this effect to each level of inference. 
+
+Recall the general structure of the plural predication model from Fig.~\ref{pluralRSA}: the pragmatic listener $L_{1}$ reasons about the speaker $S_{1}$ reasoning about a naive listener $L_{0}$. At the lowest level of inference, $L_{0}$ interprets an utterance $u$ according to some interpretation $V$ to determine the state of affairs $s$. We model contextual predictability as the inverse of noise in the collective interpretation, which manifests as a scalar multiplier of the estimated collective property. In other words, as collective noise increases, contextual predictability of the collective property decreases. At the level of $L_{0}$, noise serves to decrease the probability of correctly resolving the state. Descriptively, the distribution over states $L_{0}$ infers is flatter as a function of noise. Simply putt, noisier interpretations are less informative.
+
+At the second level of inference, $S_{1}$ is aware of this effect of noise on $L_{0}$, and takes it into account as he estimates the utility of his utterance. Noisier, less informative interpretations are less useful for $S_{1}$ to achieve the goal of correctly resolving $s$, and as a result $S_{1}$ is less likely to use them. At the highest level of inference, $L_{1}$ is the aware of the effect of noise on the choice of $S_{1}$'s utterance interpretations. Given this effect, $L_{1}$ is less likely to resolve the interpretation as collective (and thus is more likely to resolve it as distributive) as noise increases. As a result, the probability of a collective interpretation for an ambiguous utterance (e.g., \emph{the boxes are tall}) decreases as noise increases. To correctly predict the human data concerning collective interpretations from Expt.~2, all we needed was to assign different values for collective noise to the different predicates in our model. Again, the success of this manipulation confirms our original hypothesis: different predicates carry different amounts of noise with their collective properties, which determines their relative rates of collective interpretations.
+
+Our model's success does not end here. Supporting the general framework of rational inference in communication, our model also captured (both qualitatively and quantitatively) the affect of speaker knowledge on interpretation choice. We observed that in scenarios where speakers likely lacked information about individual properties, collective interpretations were more prevalent. We hypothesized a source for this effect: without epistemic support for distributive interpretations, collective interpretations are more useful to speakers, and thus more probable for listeners. The success of the speaker access to knowledge parameter, $a$, in our model lends credence to this hypothesis.
 
 
 \section{Conclusion}
@@ -784,7 +793,7 @@ To understand this mechanism, namely how contextual predictability affects the c
 
 \appendix
 
-\section{Full mixed effects linear regression models from Expt.~1}\label{expt1results}
+\section{Full mixed effects logistic regression models from Expt.~1}\label{expt1results}
 
 
 Table \ref{expt1analysis1} presents model coefficients for the full mixed logistic regression model used in the analysis of disambiguating paraphrases in Expt.~1. The model predicts collective referent choice from fixed effects for disambiguating utterance and trial, as well as random by-participant, by-predicate, and by-scenario intercepts. The model also includes random slopes for participants grouped by utterance. The fixed effects predictors were centered before analysis.
