--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-04-09 15:15:36 -0700 
+%% Created for Greg Scontras at 2015-04-15 14:43:02 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{piantadosietal2012,
+	Author = {Steven T. Piantadosi and Harry Tily and Edward Gibson},
+	Date-Added = {2015-04-15 21:42:03 +0000},
+	Date-Modified = {2015-04-15 21:43:02 +0000},
+	Journal = {Cognition},
+	Pages = {280-291},
+	Title = {The communicative efficiency of ambiguity in language},
+	Volume = {122},
+	Year = {2012}}
+
+@electronic{bnc,
+	Date-Added = {2015-04-13 22:31:13 +0000},
+	Date-Modified = {2015-04-13 22:33:23 +0000},
+	Title = {The {B}ritish {N}ational {C}orpus},
+	Urldate = {2007}}
 
 @article{goodmanstuhlmuller2013,
 	Author = {Noah D. Goodman and Andreas Stuhlm\"{u}ller},
