adding corpus experiments to manuscript

--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-04-15 14:43:02 -0700 
+%% Created for Greg Scontras at 2015-05-05 11:37:21 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{davies2011,
+	Author = {Mark Davies},
+	Date-Added = {2015-05-05 18:33:45 +0000},
+	Date-Modified = {2015-05-05 18:37:21 +0000},
+	Title = {\emph{Google Books Corpus}. ({B}ased on {G}oogle {B}ooks n-grams)},
+	Url = {http://googlebooks.byu.edu/},
+	Year = {2011--}}
 
 @article{piantadosietal2012,
 	Author = {Steven T. Piantadosi and Harry Tily and Edward Gibson},
